fix meal entrance animation on mobile

--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -17,24 +17,7 @@
 }
 
 .swing-in-top-fwd {
-	-webkit-animation: swing-in-top-fwd 0.5 cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
-	animation: swing-in-top-fwd 0.5 cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
-}
-@-webkit-keyframes swing-in-top-fwd {
-	0% {
-		-webkit-transform: rotateX(-100deg);
-		transform: rotateX(-100deg);
-		-webkit-transform-origin: top;
-		transform-origin: top;
-		opacity: 0;
-	}
-	100% {
-		-webkit-transform: rotateX(0deg);
-		transform: rotateX(0deg);
-		-webkit-transform-origin: top;
-		transform-origin: top;
-		opacity: 1;
-	}
+	animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
 }
 @keyframes swing-in-top-fwd {
 	0% {
